# ai-customer-service-agent

./: .env.example  .gitignore  CHECKLIST.md  CLEANUP_SUMMARY.md  Dockerfile  ELASTICSEARCH_GUIDE.md  ELASTICSEARCH_USAGE.md  GETTING_STARTED.md  IMPORT_FIXES.md  INDEX.md  INHOUSE_SYSTEM.md  LICENSE  ML_MODELS_USED.md  PROJECT_GUIDE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_FIX.md  QUICK_REFERENCE.md  README.md  README_TYREPLEX.md  SETUP_INSTRUCTIONS.md  START_HERE.md  TYREPLEX_IMPLEMENTATION_SUMMARY.md  WHAT_WE_BUILT.md  cleanup.py  demo.py  diagnose_voice.py  docker-compose.yml  process_csv.py  pyproject.toml  quick_test.py  requirements.txt  run.sh  setup.py  setup_csv.py  test_complete_system.py  test_coqui_tts.py  test_csv_integration.py  test_microphone.py  test_mongodb_insertion.py  (+8 more)
data/: tyreplex_knowledge.json
docs/: BUILD_YOUR_OWN_MODEL.md  INHOUSE_ARCHITECTURE.md  TYREPLEX_ARCHITECTURE.md  TYREPLEX_QUICKSTART.md  YOUR_CSV_IMPLEMENTATION_GUIDE.md
examples/: basic_usage.py  complete_ml_demo.py  performance_report.py  tyreplex_call_center_demo.py  tyreplex_csv_demo.py  tyreplex_real_phone.py  workflow_demo.py
notebooks/: OpenAI AgentKit.ipynb
scripts/: deploy.py  run_demo.py
src/api/: __init__.py  rest_api.py
src/customer_service_agent/: __init__.py  agent.py  api.py  config.py  csv_tools.py  evaluator.py  integrated_agent.py  models.py  tools.py  tyreplex_tools.py  tyreplex_voice_agent.py  utils.py  voice_agent_local.py
src/inhouse_ml/: call_manager.py  csv_processor.py  data_processor.py  database.py  elasticsearch_indexer.py  model_trainer.py  mongodb_manager.py  notification_service.py  outbound_dialer.py
src/ml_system/: dataset_builder.py  ml_inference.py  model_trainer.py
tests/: __init__.py  test_agent.py  test_evaluator.py  test_tools.py
